--- a/testimonials-grid/style.css
+++ b/testimonials-grid/style.css
@@ -49,7 +49,7 @@ body {
   height: 40px;
   border-radius: 50%;
   margin-right: 10px;
-  /* border: 2px solid; */
+  border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
 .card-testimonial {
@@ -85,6 +85,10 @@ body {
   color: #f5f5fa;
   grid-column: 2 / 4;
   grid-row: 2;
+}
+
+.card-bg-black .card-image {
+  border: 2px solid hsl(263, 55%, 52%);
 }
 
 .card:nth-of-type(5) {
